--- a/FireApp/FireApp.csproj
+++ b/FireApp/FireApp.csproj
@@ -13,8 +13,19 @@
         <PackageReference Include="Hangfire.Dashboard.Basic.Authentication" Version="7.0.1" />
         <PackageReference Include="Hangfire.MemoryStorage" Version="1.8.0" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.0"/>
+        <PackageReference Include="Microsoft.Windows.Compatibility" Version="8.0.1" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
+        <PackageReference Include="System.IO.Abstractions" Version="20.0.4" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Update="Resources\sample1.txt">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="Resources\subFolder\sample2.txt">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
